--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -619,12 +619,11 @@
                       <i class="fa-solid fa-plus"></i>
                     </button>
                   </div>
-                  <div class="col-sm-3" >
-                    <button type="button" id="icon" class="btn btn-primary" title="Edit" id="editExternalClaimExperienceButton"
-                      data-bs-toggle="modal" data-bs-target="#addExternalClaimExperienceModal" [hidden]="true" >
-                      <i class="fa-solid fa-pencil"></i>
-                    </button>
-                    <button type="button" id="icon" class="btn btn-primary" title="Edit" (click)="openExternalClaimExpEditModal()">
+                  <div class="col-sm-3">
+                    <button type="button" id="icon" class="btn btn-primary" title="Edit"
+                      [attr.data-bs-toggle]="selectedExternalClaimExp ? 'modal' : null"
+                      [attr.data-bs-target]="selectedExternalClaimExp ? '#addExternalClaimExperienceModal' : null"
+                      (click)="openExternalClaimExpEditModal()">
                       <i class="fa-solid fa-pencil"></i>
                     </button>
                   </div>
@@ -654,7 +653,7 @@
               </ng-template>
               <ng-template pTemplate="body" let-externalClaim>
                 <tr [class.p-highlight]="externalClaim === selectedExternalClaimExp" (click)="onExternalClaimSelect(externalClaim)" style="cursor: default" >
-                  <td>{{externalClaim.clientCode}}</td>
+                  <td>{{ clientDetails?.firstName+" "+clientDetails?.lastName }}</td>
                   <td>{{externalClaim.claimPaid}}</td>
                   <td>{{externalClaim.insurer}}</td>
                   <td>{{externalClaim.policyNumber}}</td>
@@ -884,7 +883,7 @@
 
               <div class="d-flex justify-content-end mt-2 mb-2">
                 <button type="button" class="btn btn-outline-primary mx-3" #closebutton data-bs-dismiss="modal" (click)="clearForm()">Cancel</button>
-                <button type="button" class="btn btn-primary" #closebutton (click)="createExternalClaimExp()">Save</button>
+                <button type="button" class="btn btn-primary" #closebutton (click)="externalClaimExpAction()">Save</button>
               </div>
             </form>
           </div>
