Ability to Edit Quotation Source and bug fixes

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -45,7 +45,7 @@
     </div>
     <div class="mb-3">
       <button
-        [disabled]="isLoading"
+        [disabled]="loginForm.invalid || isLoading"
         type="submit"
         id="login-submit"
         class="btn btn-primary btn-full-width fadeIn"
