--- a/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.css
@@ -57,7 +57,7 @@
 
 /* Label styling */
 .modal-body label {
-  font-weight: bold;
+  font-weight: 500;
   font-size: 14px;
   color: #333;
   display: block;
