--- a/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-sources/quotation-sources.component.html
@@ -15,7 +15,9 @@
               </div>
               <div class="col-sm-3">
                 <button type="button" id="icon" class="btn btn-primary" title="Edit"
-                  >
+                  [attr.data-bs-toggle]="selectedSource ? 'modal' : null"
+                  [attr.data-bs-target]="selectedSource ? '#addSourcesModal' : null"
+                  (click)="openSourceEditModal()">
                   <i class="fa-solid fa-pencil"></i>
                 </button>
               </div>
@@ -33,23 +35,23 @@
         </div>
       </div>
 
-      <!-- Add Sources Modal -->
+      <!-- Add and edit Sources Modal -->
       <div class="modal fade" id="addSourcesModal" tabindex="-1" role="dialog" aria-labelledby="addSourcesModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content" id="addSourcesModal">
             <div class="modal-body">
-              <button type="button" #closebutton class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close" (click)="clearForm()"></button>
+              <button type="button" #closebutton class="btn-close float-end" data-bs-dismiss="modal" aria-label="Close" (click)="clearForm()">X</button>
               <h5 class="modal-title" id="modalTitle">Define a new Quotation Source</h5>
 
-              <form [formGroup]="sourcesForm" (ngSubmit)="onSubmit()" class="flex flex-col gap-4">
+              <form [formGroup]="sourcesForm" class="flex flex-col gap-4">
                 <div class="flex flex-col">
                   <label for="description" class="mb-2">Description</label>
-                  <textarea
+                  <input
                     id="description"
                     formControlName="description"
                     placeholder="Enter description"
                     class="p-2 border rounded"
-                  ></textarea>
+                  />
                 </div>
 
                 <div class="flex flex-col">
@@ -66,8 +68,8 @@
                 </div>
 
                 <div class="submit-container">
-                  <button type="submit" [disabled]="sourcesForm.invalid">
-                    Submit
+                  <button class="btn btn-primary" type="submit" (click)="sourceModalAction()">
+                    Save Details
                   </button>
                 </div>
 
@@ -118,8 +120,8 @@
               (click)="onSourceSelect(source)"
               style="cursor: default; height: 40px;"
             >
-              <td>{{source.description}}</td>
-              <td>{{ getApplicableModuleLabel(source.applicableModule) }}</td>
+              <td>{{source.description | sentenceCase}}</td>
+              <td>{{ getApplicableModuleLabel(source.applicableModule) | sentenceCase }}</td>
             </tr>
           </ng-template>
           <ng-template pTemplate="emptymessage">
