--- a/src/app/features/fms/components/base-fms/base-fms.component.html
+++ b/src/app/features/fms/components/base-fms/base-fms.component.html
@@ -1,4 +1,58 @@
-
+<div class="container-fluid"> 
+   <!-- Top Bar -->
+   <form [formGroup]="receiptingDetailsForm">
+    <div class="top-bar">
+        <div class="top-select org">
+            <span>{{'fms.org' | translate}}:</span>
+            <div class="dropdown-container">
+                <select class="form-control fw-bold" id="organization"  formControlName="organization"  (change)="onOrganizationChange($event)"  >
+                    <label for="organization">Select</label>
+                    <option *ngFor="let org of organization" [value]="org.id" [selected]="org.id===2">{{ org.name }}</option>
+                    
+               
+            </select>
+            <i class="pi pi-chevron-down dropdown-icon"></i>
+        </div>
+        </div>
+        <div class="top-select">
+            <span>{{'fms.branch' | translate}}:</span>
+            
+                <div class="dropdown-container ">
+                    <select class="form-control fw-bold" id="branch" formControlName="selectedBranch"  (change)="onBranchChange($event)">
+                   
+                        <option value=""  >Select </option>
+                        <option *ngFor="let branch of branches" [value]="branch.id" [selected]="branch.id===1" >{{branch.name}}</option>
+                
+            </select>
+            <i class="pi pi-chevron-down dropdown-icon " ></i>
+        </div>
+        </div>
+        <div class="top-select">
+            <span>{{'fms.yr' | translate}}:</span>
+            
+                <div class="dropdown-container">
+                    <select class="form-control fw-bold">
+                <option>2024</option>
+                <option>2023</option>
+                <option>2022</option>
+            </select>
+            <i class="pi pi-chevron-down dropdown-icon"></i>
+        </div>
+        </div>
+        <div class="top-select">
+            <span>{{'fms.period' | translate}}:</span>
+            <div class="dropdown-container">
+            <select class="form-control fw-bold">
+                 
+                <option>OCT</option>
+                <option>NOV</option>
+                <option>DEC</option>
+            </select>
+            <i class="pi pi-chevron-down dropdown-icon"></i>
+        </div>
+        </div>
+    </div>
+</form>
 <div class="base-content-section">
   
     <div class="card">
@@ -127,3 +181,4 @@
       </div>
     </div>
   </div>
+</div>  
