Implement Login Screen Validation and view quotation button functionality

--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -15,8 +15,18 @@
   <form [formGroup]='loginForm' novalidate>
     <div class="form-group mb-3" controlHasError controlRequiredAsterisk>
       <label for="emailAddress" class="form-label">{{ 'auth.email_address' | translate }}</label>
-      <input type="email" class="form-control" id="emailAddress" formControlName='username'>
+      <input
+        type="email"
+        class="form-control"
+        id="emailAddress"
+        formControlName='username'
+        [class.is-invalid]="loginForm.get('username').touched && loginForm.get('username').invalid"
+      >
+      <div class="error-message" *ngIf="loginForm.get('username').touched">
+        {{ getErrorMessage('username') }}
+      </div>
     </div>
+
     <div class="form-group mb-3" controlHasError controlRequiredAsterisk>
       <a class="text-muted float-end" routerLink="./forgot-password"><small>{{ 'auth.forgot_password' | translate }}</small></a>
       <label for="password" class="form-label" i18n='Password|Auth Password Input@@authPasswordInput'>{{ 'auth.password' | translate }}</label>
@@ -26,26 +36,34 @@
           class='form-control'
           id='password'
           formControlName='password'
+          [class.is-invalid]="loginForm.get('password').touched && loginForm.get('password').invalid"
         />
         <div class="input-group-append" data-password="false">
           <div class="input-group-text border-radius-none">
             <span>
               <i class="fa fa-eye text-dark"
-                  [class.fa-eye-slash]="showPassword" (click)="togglePasswordVisibility()"
+                [class.fa-eye-slash]="showPassword" (click)="togglePasswordVisibility()"
               ></i>
             </span>
           </div>
         </div>
       </div>
+      <div class="error-message" *ngIf="loginForm.get('password').touched">
+        {{ getErrorMessage('password') }}
+      </div>
       <ng-container *controlErrorContainer></ng-container>
     </div>
+
+    <!-- Remember me checkbox -->
     <div class="form-group mb-3 form-check">
       <input type="checkbox" class="form-check-input form-label" name="rememberMe"  id="rememberMe" formControlName="rememberMe">
       <label class="form-check-label form-label" for="rememberMe">{{ 'auth.remember_me' | translate }}</label>
     </div>
+
+    <!-- Login button -->
     <div class="mb-3">
       <button
-        [disabled]="loginForm.invalid || isLoading"
+        [disabled]="(loginForm.invalid && loginForm.touched) || isLoading"
         type="submit"
         id="login-submit"
         class="btn btn-primary btn-full-width fadeIn"
