--- a/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.css
+++ b/src/app/features/gis/components/quotation/components/revise-reuse-quotation/revise-reuse-quotation.component.css
@@ -35,16 +35,20 @@
     height: 35px;
 }
 #action-buttons{
-    color:rgba(0, 82, 155, 1); 
-    font-family: Roboto;
-font-size: 14px;
-font-weight: 600;
-line-height: 16.41px;
-text-align: left;
-text-decoration-line: underline;
-text-decoration-style: solid;
-text-underline-position: from-font;
-text-decoration-skip-ink: none;
+  color:rgba(0, 82, 155, 1);
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 16.41px;
+  text-align: left;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  border: none; /* Removes the border */
+  background: none; /* Removes the default button background */
+  padding: 0; /* Ensures no additional padding */
+  cursor: pointer;
 
 }
 #search-buttons{
